--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "astro": "^5.5.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lucide": "^0.544.0",
     "lucide-react": "^0.307.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
